# ArkanoidSTM32

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: arm-none-eabi-gcc.cmake
src/: main.cpp
src/Game/: Bricks.h  DrawObjects.cpp  DrawObjects.h  Game.cpp  Game.h  GameObjects.cpp  GameObjects.h  Utils.cpp  Utils.h
stm32/: .mxproject  F446RE.ioc  Makefile
stm32/Core/Inc/: main.h
stm32/Core/Src/: gpio.c  main.c
utils/: GameOver.h  create_image.py  output.h
